# cb

./: .gitignore  .travis.yml  Cargo.toml  LICENSE-MIT  Makefile  README.md
cli/: Cargo.toml
cli/src/: actions.rs  handler.rs  lib.rs  main.rs
common/: Cargo.toml
common/src/: constants.rs  errors.rs  lib.rs  macros.rs  message.rs
common/src/errors/: string_error_result.rs
common/src/macros/: exit.rs  fatal.rs  oops.rs
common/src/message/: action.rs  response.rs
server/: Cargo.toml
server/src/: clipboard_handler.rs  internal.rs  lib.rs  main.rs  transmitter.rs
server/src/transmitter/: async_unix.rs
server/src/transmitter/async_unix/: codec.rs  handler.rs  peer.rs
