[package]
name = "server"
version = "0.1.0"
authors = ["Navid <yaa110@gmail.com>"]
edition = "2018"
publish = false

[[bin]]
name = "cb-server"
path = "src/main.rs"

[dependencies]
bytes = "0.4.12"
clipboard = "0.5.0"
common = { path = "../common" }
ctrlc = "3.1.2"
daemonize = "0.4.1"
env_logger = "0.6.1"
futures = "0.1.26"
gumdrop = "0.5.0"
hex = "0.3.2"
log = "0.4.6"
tokio = "0.1.19"
