[package]
name = "server"
version = "0.1.0"
authors = ["Navid <yaa110@gmail.com>"]
edition = "2018"
publish = false

[[bin]]
name = "cbs"
path = "src/main.rs"

[dependencies]
bytes = "0.4.12"
clipboard = "0.5.0"
common = { path = "../common" }
ctrlc = { version = "3.1.2", features = ["termination"] }
daemonize = "0.4.1"
env_logger = "0.6.1"
futures = "0.1.26"
hex = "0.3.2"
log = "0.4.6"
tokio = "0.1.19"
users = "0.9.1"
